--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,16 +14,28 @@
 }
 
 #landing-video{
-  background-image: url('../img/fondo-video.jpg');
+  /*background-image: url('../img/fondo-video.jpg');
   background-repeat: no-repeat;
-  background-size: 100% 100%;
-  height: 560px;
+  background-size: 100%;*/
+  height: auto;
   width: 100%;
+  position: relative;
+}
+
+#landing-video .img-fondo{
+	position: relative;
+	width: 100%;
+}
+
+#landing-video .landing-central{
+	position: absolute;
+	top: 5%;
+	width: 100%;
 }
 #landing-video .title-landing-video{
 	color:#1c1c1c;
-	line-height: 60px;
-	padding-top: 60px;
+	/*line-height: 60px;*/
+	/*padding-top: 60px;*/
 	font-family: CWMLigth;
 	font-size: 75.15px;
 }
@@ -31,12 +43,23 @@
 	color: #333333;
 	font-family: CWMLigth;
 	font-size: 24.03px;
-	margin-bottom: 110px;
+	/*margin-bottom: 80px;*/
+}
+#landing-video .btn-landing-playvideo{
+	width: 10%;
+	margin: 80px auto 0px auto;
+	min-width: 60px;
+}
+#landing-video .btn-landing-playvideo img{
+	width: 100%;
+	max-width: 120px;
+	min-width: 60px;
 }
 #landing-blockthumb .container{
 	/*height: 490px;*/
 	padding-right: 3px;
 	padding-left: 3px;
+	position: relative;
 }
 #landing-blockthumb .col-md-3 ,#landing-blockthumb .col-sm-3 {
 	padding: 5px 3px 50px 3px;
@@ -75,6 +98,40 @@
 .contZapt .title{
 
 }
+.flecha{
+    position: absolute;
+    top: 50%;
+    width: 100%;
+}
+.flecha span{
+	background-color: #fdcc01;
+    color: #000000;
+    width: 70px;
+    height: 90px;
+    font-size: 40px;
+    line-height: 90px;
+    text-align: center;
+}
+.izq{
+	    position: absolute;
+}
+.der{
+	    position: absolute;
+    right: 0;
+}
+.contLogo{
+	height: 60px;
+    text-align: center;
+    position: absolute;
+    right: 0;
+    top: 80%;
+    width: 210px;
+}
+.contLogo img{
+	height: 100%;
+    width: auto;
+    max-width: 210px;
+}
 .srx{
 
 	background-image: url('../img/fondo-srx.jpg');/*Esta imagen la he cortado yo XDDD */
@@ -82,10 +139,12 @@
 .srx, .itech, .ergo-lite, .ergo{
 /*  background-color: #130f0f;*/
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
   height: 760px;
   width: 100%;
   position: relative;
+  z-index: 1;
+
 }
 .srx figure, .ergo figure, .itech figure, .ergo-lite figure{
 	text-align: center;
@@ -94,6 +153,12 @@
     top: 50%;
     transform: translateY(-50%);
     z-index: 1;
+}
+
+.srx figure img, .ergo figure img, .itech figure img, .ergo-lite figure img{
+	width: 90%;
+    max-width: 960px;
+    min-width: 320px;
 }
 .srx-title,.itech-title,.ergo-title,.ergo-lite-title{
 	text-align: center;
@@ -124,7 +189,7 @@
 .block-srx-more img,.block-itech-more img,.block-ergo-more img,.block-ergo-lite-more img{
 	padding-bottom: 30px;
 }
-.srx-more .btnhere-src-more,.itech-more .btnhere-itech-more,.ergo-more .btnhere-ergo-more,.ergo-lite-more .btnhere-ergo-lite-more{
+.srx-more .btnhere-src-more,.itech-more .btnhere-itech-more,.ergo-more .btnhere-ergo-more,.ergo-lite-more .btnhere-ergo-lite-more,.btnDescubre{
 	background-color: #fdcc01;
 	color: #000000;
 	padding-top: 16px;
@@ -136,18 +201,18 @@
 }
 .itech{
 	 background-image: url('../img/fondo-itech.jpg');
-	
+
 }
 .ergo-lite{
 	 background-image: url('../img/fondo-ergolite.jpg');
-	 
+
 }
 .ergo{
 	 background-image: url('../img/fondo-ergo.jpg');
-	
+
 }
 .containerbtn{
-	padding: 30px 0px;	
+	padding: 30px 0px;
 }
 
 .form-contact .btnsubmit-form{
@@ -182,11 +247,13 @@
 .form-contact .form-group:last-child{
 	margin-bottom: 60px;
 }
-
+.formulario{
+	float: initial;
+}
 .css-placeholder::-webkit-input-placeholder { color: white; } /* WebKit */
 .css-placeholder:-moz-placeholder { color: white; } /* Firefox 18- */
 .css-placeholder::-moz-placeholder { color: white; } /* Firefox 19+ */
-.css-placeholder:-ms-input-placeholder { color: white; } 
+.css-placeholder:-ms-input-placeholder { color: white; }
 
 .feat-tech{ background-color: #000000;}
 .feat-tech .title-feat-tech{
@@ -201,6 +268,7 @@
 	width: 188px;
 	border: 1px solid #ffffff;
 	color: #ffffff;
+	height: 250px;
 }
 .feat-tech .itemtit-feat-tech{
 	font-family: CWMLigth;
@@ -217,42 +285,138 @@
 	padding: 20px 24px;
 }
 
+.btnDescubre{
+	width: 180px;
+    height: 33px;
+    font-size: 17px;
+    position: absolute;
+    bottom: 15px;
+    line-height: 33px;
+    display: block;
+    padding: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    display: none;
+}
 
 
 @media only screen and (min-width : 240px) and (max-width : 480px) {
+	#landing-video .title-landing-video{
+		font-size: 50px;
+		/*line-height: 30px;*/
+	}
+	#landing-video .description-landing-video{
+		font-size: 18px;
+		/*line-height: 30px;*/
+	}
+	#landing-video .btn-landing-playvideo{
+		margin: 2% auto;
+	}
+}
+
+@media ( max-width: 540px){
+	.srx-title,.itech-title,.ergo-title,.ergo-lite-title{
+		font-size: 40px;
+	}
+	#landing-video .title-landing-video{
+		font-size: 26px;
+		/*line-height: 20px;*/
+	}
+	#landing-video .description-landing-video{
+		font-size: 13px;
+		/*line-height: 30px;*/
+	}
+	.contZapt{
+		height: 400px;
+	}
+	.contLogo{
+		height: 24px;
+
+	  	width: 110px;
+	  	top: 74%;
+	}
+}
+
+@media  (min-width: 540px ) and (max-width: 768px){
+	#landing-video .title-landing-video{
+		font-size: 50px;
+		/*line-height: 20px;*/
+	}
+	#landing-video .description-landing-video{
+		font-size: 25px;
+		/*line-height: 30px;*/
+	}
+	.srx-title,.itech-title,.ergo-title,.ergo-lite-title{
+		font-size: 80px;
+	}
+	.contZapt{
+		height: 500px;
+	}
+
+}
+
+@media  (min-width: 768px ) and (max-width: 991px){
+	#landing-video .title-landing-video{
+		font-size: 50px;
+		/*line-height: 20px;*/
+	}
+	#landing-video .description-landing-video{
+		font-size: 25px;
+		/*line-height: 30px;*/
+	}
+	.title{
+		font-size: 75px;
+	}
+	.contZapt{
+		height: 700px;
+	}
+}
+
+@media (max-width: 991px){
+	.btnDescubre{
+		display: block;
+	}
+
+	.feat-tech .item-feat-tech{
+		width: 73%;
+
+	}
+	.flecha span{
+
+	    width: 35px;
+	    height: 45px;
+	    font-size: 20px;
+	    line-height: 45px;
+	}
+	.contLogo{
+		height: 35px;
+
+	    width: 130px;
+	}
+
+}
+
+@media only screen and (max-width: 991px) and (min-width : 480px){
+	.feat-tech .item-feat-tech{
+		width: 100%;
+	}
+/*
 	#landing-video .title-landing-video{
 		font-size: 60px;
 	}
 	#landing-video .description-landing-video{
 		font-size: 20px;
+		line-height: 40px;
 	}
+*/
+	#landing-video .btn-landing-playvideo{
+		margin: 5% auto;
+	}
+
+
+
 }
 
-@media only screen and (max-width : 320px) {
-	#landing-video .title-landing-video{
-		font-size: 40px;
-	}
-	#landing-video .description-landing-video{
-		font-size: 16px;
-	}
-}
-
-@media only screen and (max-width: 991px){
-	.feat-tech .item-feat-tech{
-		width: 100%;
-	}
-}
-
-@media only screen and (max-width: 768px){
-	.srx-title,.itech-title,.ergo-title,.ergo-lite-title{
-		font-size: 80px;
-	}
-}		
-@media only screen and (max-width: 540px){
-	.srx-title,.itech-title,.ergo-title,.ergo-lite-title{
-		font-size: 40px;
-	}
-}	
 
 @media only screen and (max-width: 240px){
 	.block-srx-more img, .block-itech-more img, .block-ergo-more img, .block-ergo-lite-more img{
